LightMP3 Changelog
------------------

Version 2.0.0 RC4
-----------------
-Added: Scrolling text when string is too long in all menues and song title
-Fixed: Navigation in the Media Library (when pressing circle you'll be taken to the previous selection, not on the main menu)
-Fixed: Added setting to set CPU clock for WMA
-Fixed: Track restart when pressing L on WMA, FLAC, ATRAC3(+), MP3 when played with libMad
-Fixed: Suspend and resume for WMA
-Fixed: Changed the default setting to play MP3 with Media Engine
-Fixed: X/O Swap (please note that help screen will always say X=Confirm, O=Cancel, I din't changed it)
-Fixed: Bug when creating playlist from Media Library


Version 2.0.0 RC3
-----------------
-Added: When pressing L the song will restart if more than 2% has been played
-Added: support for relative path in playlists
-Added: support for WMA (Windows Media Audio)
        Many thanks to cooleyes and hrimfaxi for the sample
-Added: "Sleep Timer" feature (kurian2z5)
-Fixed: standardized the fast forward/rewind speed for the different codecs (kurian2z5)
-Fixed: Conflict with Hold+ (kurian2z5)
        Added a setting to disable the "display off on hold".
        If you use Hold+ please disable this in LightMP3.


Version 2.0.0 RC2
-----------------
-Added: Bookmark function (for audiobook): press L+Circle while listening to a track.
        There's a new option in the settings file.
        SHUTDOWN_AFTER_BOOKMARK=0
        The default is 0, if set to 1 the psp will shut down after creating a bookmark.
        The next time you'll start LightMP3 will ask you if you want to load the saved bookmark.
-Fixed: Korean language support.
-Fixed: shuffle (always the same number were generated in RC1)
-Fixed: Added sql transaction to playPlaylist (faster change of track)
-Fixed: Bug in ID3v2.2 parsing
-Fixed: Bug in scrobbler log (time saved to file was the end of the track)


Version 2.0.0 RC1
-----------------