@@ -1,7 +1,28 @@
+//    LightMP3
+//    Copyright (C) 2009 Sakya
+//    sakya_tg@yahoo.it
+//
+//    This program is free software; you can redistribute it and/or modify
+//    it under the terms of the GNU General Public License as published by
+//    the Free Software Foundation; either version 2 of the License, or
+//    (at your option) any later version.
+//
+//    This program is distributed in the hope that it will be useful,
+//    but WITHOUT ANY WARRANTY; without even the implied warranty of
+//    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+//    GNU General Public License for more details.
+//
+//    You should have received a copy of the GNU General Public License
+//    along with this program; if not, write to the Free Software
+//    Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
 #ifndef __mp3xing_h
 #define __mp3xing_h (1)
 
 #include <mad.h>
+
+#define XING_BUFFER_SIZE 300
+#define XING_GUID	(unsigned char [4]) \
+		      {	0x58, 0x69, 0x6E, 0x67 }
 
 struct xing {
   int flags;
@@ -18,6 +39,6 @@ enum {
   XING_SCALE  = 0x0008
 };
 
-int parse_xing(struct xing *xing, struct mad_bitptr ptr, unsigned int bitlen);
+int parse_xing(unsigned char *buffer, int startPos, struct xing *xing);
 
 #endif
